<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:columnCount="2"
    >

    <TextView
        style="@style/DebugDrawerSubheader"
        app:layout_columnSpan="2"
        app:layout_gravity="start|end"
        android:text="@string/debug_header_device_information"
        />

    <TextView
        style="@style/DebugDrawerRowTitle"
        app:layout_gravity="start|end|center_vertical"
        android:text="@string/debug_device_make"
        />
    <TextView
        android:id="@+id/debug_device_make"
        style="@style/DebugDrawerRowValue"
        app:layout_gravity="start|end|center_vertical"
        />

    <TextView
        style="@style/DebugDrawerRowTitle"
        app:layout_gravity="start|end|center_vertical"
        android:text="@string/debug_device_model"
        />
    <TextView
        android:id="@+id/debug_device_model"
        style="@style/DebugDrawerRowValue"
        app:layout_gravity="start|end|center_vertical"
        />

    <TextView
        style="@style/DebugDrawerRowTitle"
        app:layout_gravity="start|end|center_vertical"
        android:text="@string/debug_device_resolution"
        />
    <TextView
        android:id="@+id/debug_device_resolution"
        style="@style/DebugDrawerRowValue"
        app:layout_gravity="start|end|center_vertical"
        />

    <TextView
        style="@style/DebugDrawerRowTitle"
        app:layout_gravity="start|end|center_vertical"
        android:text="@string/debug_device_density"
        />
    <TextView
        android:id="@+id/debug_device_density"
        style="@style/DebugDrawerRowValue"
        app:layout_gravity="start|end|center_vertical"
        />

    <TextView
        style="@style/DebugDrawerRowTitle"
        app:layout_gravity="start|end|center_vertical"
        android:text="@string/debug_device_release"
        />
    <TextView
        android:id="@+id/debug_device_release"
        style="@style/DebugDrawerRowValue"
        app:layout_gravity="start|end|center_vertical"
        />

    <TextView
        style="@style/DebugDrawerRowTitle"
        app:layout_gravity="start|end|center_vertical"
        android:text="@string/debug_device_api_level"
        />
    <TextView
        android:id="@+id/debug_device_api"
        style="@style/DebugDrawerRowValue"
        app:layout_gravity="start|end|center_vertical"
        />

</android.support.v7.widget.GridLayout>